2007-10-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-mime-application-chooser.[ch]:
        * libnautilus-private/nautilus-open-with-dialog.[ch]:
	Moved these from eel and renamed
	
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Use the nautilus version imported above instead of the eel one.

2007-10-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-signaller.c:
	Replace gnome-vfs mime monitor with NautilusSignaller signal.
	
        * src/nautilus-query-editor.c:
	Use gio to list all mime types

2007-10-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-theme.[ch]:
	Delete leftover files

2007-09-28  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Update for new gio pkgconfig name

2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Update to the new name for g_format_file_size_for_display

2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-link.c:
        * src/file-manager/fm-icon-container.c:
        * src/nautilus-query-editor.c:
	Use gio mimetype functions instead of gnome-vfs ones.

2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.[ch]:
        * libnautilus-private/nautilus-program-choosing.[ch]:
        * libnautilus-private/nautilus-recent.[ch]:
	Use GAppInfo instead of GnomeVFSMimeApplication
	
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-information-panel.c:
        * test/test-nautilus-mime-actions.c: